--- a/lessions/w2.md
+++ b/lessions/w2.md
@@ -14,3 +14,9 @@
 2. validate student
 3. UI Form student
 4. styling teacher detail page
+
+### Submit
+
+1. git checkout master-w2
+2. git checkout {yourname}-w2
+3. send pull request you branch to master-w2
