--- a/lessions/w4.md
+++ b/lessions/w4.md
@@ -15,6 +15,7 @@
 5. ui on student courses
 6. student register course
 7. (5pts) As a teacher, I can limit students that can enrol to my course
+8. alert close after 3 seconds
 
 ### Submit
 
