--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,3 +33,42 @@ en:
   title:
     index: '%{entity} List'
     new: 'New %{entity}'
+    home: 'Home'
+    teacher: "Teacher"
+    student: "Student"
+    course: "Course"
+    name: "Name"
+    start_date: "Start Date"
+    end_date: "End Date"
+    show: "Show"
+    edit: "Edit"
+    destroy: "Destroy"
+    update: 'Update'
+    first_name: "First Name"
+    last_name: "Last Name"
+    phone: "Phone"
+    parent_phone: "Parent Phone"
+    email: "Email"
+    gender: "Gender"
+    date_of_birth: "Date of Birth"
+    active: "Active"
+    course_registeration: "Course Registeration"
+    back: "Back"
+    female: "Female"
+    male: "Male"
+    max_student: "Max Student"
+    teacher: "Teacher"
+    submit: "Submit"
+    student_registered: "Student Registered"
+    are_you_sure: "Are you sure?"
+    create_rolment: "Create Enrolment"
+    enrolment_was_successfully_created: "Enrolment was successfully created."
+    course_was_successfully_created: "Course was successfully created"
+    course_was_successfully_updated: "Course was successfully updated"
+    course_was_successfully_destroy: "Course was successfully destroyed"
+    student_was_successfully_created: "Student was successfully created"
+    student_was_successfully_updated: "Student was successfully updated"
+    student_was_successfully_destroy: "Student was successfully destroyed"
+    teacher_was_successfully_created: "Teacher was successfully created"
+    teacher_was_successfully_updated: "Teacher was successfully updated"
+    teacher_was_successfully_destroy: "Teacher was successfully destroyed"
