--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -1,2 +1,31 @@
 km:
+  title:
+    index: '%{entity} List'
+    new: 'បង្កើតថ្មី​ %{entity}'
+    krobei: 'ក្របី'
+    home: 'ទំព័រដើម'
+    teachers: 'គ្រូ'
+    students: 'សិស្ស'
+    courses: 'មុខវិជ្ជា'
+    language: 'ភាសា'
+  header:
+    first_name: 'នាមត្រកូល'
+    last_name: 'នាមខ្លួន'
+    phone: 'លេខទូរសព្ទ'
+    email: 'អុីម៉ែល'
+    gender: 'ភេទ'
+    date_of_birth: 'ថ្ងៃខែឆ្នាំកំណើត'
+    parents_phone: 'លេខអាណាព្យាបាល'
+    teacher_name: 'ឈ្មោះគ្រូ'
+    end_date: 'ថ្ងៃបញ្ចប់'
+    start_date: 'ថ្ងៃចាប់ផ្តើម'
+    max_student: 'សិស្សសរុប'
+    course_name: 'ឈ្មោះមុខវិជ្ជា'
+  btn:
+    show: 'បង្ហាញ'
+    edit: 'កែប្រែ'
+    destroy: 'លុប'
+  lan:
+    english: 'អង់គ្លេស'
+    khmer: 'ខ្មែរ'
   
