update homework week 6

--- a/config/locales/active_model.km.yml
+++ b/config/locales/active_model.km.yml
@@ -1,4 +1,10 @@
 km:
+  activerecord:
+    models:
+      teacher: Teacher
+    attributes:
+      teacher:
+        first_name: PAPA
   errors:
     # The default format to use in full error messages.
     format: "%{attribute} %{message}"
