--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,3 +73,19 @@ en:
     index: '%{entity} List'
     new: 'New %{entity}'
     krobei: 'Krobei'
+    teacher: 'Teacher'
+    student: 'Student'
+    course: 'Course'
+    update: 'Update'
+    submit: 'Submit'
+    create_rolment: 'Create Rolement'
+    new_enrolment: 'New Enrolment'
+    student_was_successfully_created: 'Student was successfully created!'
+    student_was_successfully_updated: student_was_successfully_destroy
+    student_was_successfully_destroy: 'student_was_successfully_destroy'
+    teacher_was_successfully_created: 'Teacher was successfully created'
+    teacher_was_successfully_updated: 'Teacher was successfully update'
+    teacher_was_successfully_destroy: 'Teacher was successfully destroy'
+    course_was_successfully_created: 'Course was successfully created'
+    course_was_successfully_updated: 'Course was successfully updated'
+    course_was_successfully_destroy: 'Course was successfully destroy'
