--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,35 +1,8 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
+  lan:
+    language: Language
+    khmer: ខ្មែរ​
+    english: English
   action:
     edit: Edit
     create: Create
@@ -37,6 +10,9 @@ en:
     destroy: Destroy
     info: Info
     cancel: Cancel
+    back: Back,
+    registered: registered
+    submit: Submit
   column:
     name: Name
     start_date: Start Date
@@ -49,14 +25,14 @@ en:
     gender: Gender
     date_of_birth: Date of Birth
     active: Active
-    course_registeration: Course Registeration
-    back: Back
+    course_registration: Course Registeration
     max_student: Max Student
   entity:
     teacher: Teacher
     student: Student
     course: Course
     home: Home
+    enrolment: Enrolment
   form:
     create_success: Created %{entity} successfully
     create_fail: Failed to create %{entity}
@@ -67,9 +43,82 @@ en:
   gender:
     female: Female
     male: Male
+  status:
+    true: true
+    false: false
   title:
     confirm_destroy: Are you sure to destroy %{entity}?
     destroy: Destroy %{entity}
     index: '%{entity} List'
-    new: 'New %{entity}'
-    krobei: 'Krobei'
+    new: New %{entity}
+    edit: Edit %{entity}
+    detail: '%{entity} Detail'
+    krobei: Krobei
+    student_was_successfully_created: Student was successfully created
+    student_was_successfully_updated: Student was successfully destroy
+    student_was_successfully_destroy: Student was successfully destroy
+    teacher_was_successfully_created: Teacher was successfully created
+    teacher_was_successfully_updated: Teacher was successfully updated
+    teacher_was_successfully_destroy: Teacher was successfully destroy
+    course_was_successfully_created: Course was successfully created
+    course_was_successfully_updated: Course was successfully updated
+    course_was_successfully_destroy: Course was successfully destroy
+  date:
+    abbr_day_names: [Sun, Mon, Tue, Wed, Thu, Fri, Sat]
+    day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
+    abbr_month_names: [~, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec]
+    month_names: [~, January, February, March, April, May, June, July, August, September, October, November, December]
+    order:
+    - :year
+    - :month
+    - :day
+    formats:
+      default: "%Y-%m-%d"
+      long: "%B %d, %Y"
+      short: "%b %d"
+  modal:
+    are_you_sure: តើ​អ្នក​ពិត​ជា​ចង់​លុបឬ​?
+    cancel: បោះបង់
+    delete: លុប
+  home:
+    welcomes: Welcomes!
+    our_mission: Our Misson.
+  student:
+    courses_registered: Course registered
+  course:
+    student_registered: Student registered
+  enrolment:
+    create_enrolment: Create enrolment
+  errors:
+    format: "%{attribute} %{message}"
+    messages:
+      accepted: must be accepted
+      blank: can't be blank
+      confirmation: doesn't match %{attribute}
+      empty: can't be empty
+      equal_to: must be equal to %{count}
+      even: must be even
+      exclusion: is reserved
+      greater_than: must be greater than %{count}
+      greater_than_or_equal_to: must be greater than or equal to %{count}
+      inclusion: is not included in the list
+      invalid: is invalid
+      less_than: must be less than %{count}
+      less_than_or_equal_to: must be less than or equal to %{count}
+      model_invalid: 'Validation failed: %{errors}'
+      not_a_number: is not a number
+      not_an_integer: must be an integer
+      odd: must be odd
+      other_than: must be other than %{count}
+      present: must be blank
+      required: must exist
+      taken: has already been taken
+      too_long:
+        one: is too long (maximum is 1 character)
+        other: is too long (maximum is %{count} characters)
+      too_short:
+        one: is too short (minimum is 1 character)
+        other: is too short (minimum is %{count} characters)
+      wrong_length:
+        one: is the wrong length (should be 1 character)
+        other: is the wrong length (should be %{count} characters)
