--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -1,60 +1,14 @@
 km:
   action:
-    edit: Edit
-    create: Create
-    update: Update
-    destroy: Destroy
-    info: Info
-    cancel: Cancel
-  entity:
-    teacher: Teacher
-  form:
-    create_success: Created %{entity} successfully
-    create_fail: Failed to create %{entity}
-    update_success: Updated %{entity} successfully
-    update_fail: Failed to update %{entity}
-    destroy_success: Destroyed %{entity} successfully
-    destroy_fail: Failed to destroy %{entity}
-  gender:
-    female: ស្រី
-    male: ប្រុស
-  title:
-    index: '​បញ្ជី%{entity}'
-    new: '%{entity}ថ្មី'
-    confirm_destroy: Are you sure to destroy %{entity}?
-    destroy: Destroy %{entity}
-    welcomes: 'សូមស្វគមន៏'
-    our_mission: 'ពួកយើងជឿថាយើងអាចផ្តល់កាអប់រំទៅកាន់មនុស្សរាល់គ្នា'
-    krobei: 'ក្របី'
-    home: 'ទំព័រដើម'
-    teacher: 'លោកគ្រូ ឬ អ្នកគ្រូ'
-    student: 'សិស្ស'
-    course: 'វគ្គសិក្សា'
-    name: 'ឈ្មោះ'
-    start_date: 'ថ្ងៃចាប់ផ្ដើម'
-    end_date: 'ថ្ងៃបញ្ចប់'
-    show: 'បង្ហាញ'
-    edit: 'កែប្រែ'
-    update: 'ធ្វើឱ្យទាន់សម័យ'
-    first_name: 'គោត្តនាម'
-    last_name: 'នាម'
-    phone: 'លេខទូរស័ព្ទ'
-    parent_phone: 'លេខទូរស័ព្ទអាណាព្យាបាល'
-    email: 'អ៊ីម៉ែល'
-    gender: 'ភេទ'
-    date_of_birth: 'ថ្ងៃខែឆ្នាំកំណើត'
-    active: 'សកម្មភាព'
-    course_registeration: 'ចុះឈ្មោះចូលរៀន'
-    back: 'ត្រលប់ក្រោយ'
-    female: 'ស្រី'
-    male: 'ប្រុស'
-    max_student: 'ចំនួនសិស្សច្រើនបំផុត'
-    submit: 'បញ្ចូល'
-    student_registered: 'សិស្សដែលបានចុះឈ្មោះចូលរៀន'
-    courses_registered: 'វគ្គសិក្សាដែលបានចុះឈ្មោះ'
-    are_you_sure: 'តើអ្នកប្រាកដទេ?'
-    create_rolment: 'បង្កើតថ្មាក់ថ្មី'
-    language: 'ភាសា'
+    edit: កែប្រែ
+    create: បង្កើត
+    update: ធ្វើឱ្យទាន់សម័យ
+    destroy: លុប
+    info: ពត៏មាន
+    cancel: បោះបង់
+    back: ត្រលប់ក្រោយ
+    submit: ដាក់​ស្នើ​
+    create_enrolment: បង្កើតថ្មាក់ថ្មី
   date:
     formats:
       # Use the strftime parameters for formats.
@@ -76,6 +30,50 @@ km:
       - month
       - day
 
+  entity:
+    teacher: លោកគ្រូ ឬ អ្នកគ្រូ
+    student: សិស្ស
+    course: វគ្គសិក្សា
+    home: ទំព័រដើម
+    enrolment: ការចុះឈ្មោះចូលរៀន
+  form:
+    create_success: បាន​បង្កើត​ %{entity} បាន​ដោយ​ជោគ​ជ័យ​
+    create_fail: បរាជ័យ​ក្នុង​ការបង្កើត​ %{entity}
+    update_success: បាន​កែ​ប្រែ​ %{entity} បាន​ដោយ​ជោគជ័យ​
+    update_fail: បរាជ័យ​ក្នុង​ការកែ​ប្រែ​ %{entity}
+    destroy_success: បាន​លុប​ %{entity} បាន​ដោយ​ជោគជ័យ​
+    destroy_fail: បរាជ័យ​ក្នុង​ការ​លុប​ %{entity}
+  gender:
+    female: ស្រី
+    male: ប្រុស
+  home:
+    welcomes: សូម​ស្វាគមន៍​!
+    our_mission: គោល​បំណង​របស់​យើង​។​
+  lan:
+    english: អង់គ្លេស
+    khmer: ខ្មែរ
+  modal:
+    are_you_sure: តើអ្នកប្រកដទេថាចង់លុប
+    cancel: បោះបង់
+    delete: លុប
+  status:
+    true: សកម្ម
+    false: មិនសកម្ម
+  table:
+    name: ឈ្មោះ​
+    start_date: ថ្ងៃ​ចាប់​ផ្ដើម​
+    end_date: ថ្ងៃ​បញ្ចប់​
+    first_name: នាម​ខ្លួន​
+    last_name: នាម​ត្រកូល​
+    phone: លេខ​ទូរស័ព្ទ​
+    parent_phone: លេខ​ទូរស័ព្ទ​អាណាព្យាបាល​
+    email: អ៊ីមែល​
+    gender: ភេទ​
+    date_of_birth: ថ្ងៃ​ខែ​ឆ្នាំ​កំណើត​
+    active: ស្ថានភាព
+    course_registration: ការ​ចុះ​ឈ្មោះ​ចូល​វគ្គ​សិក្សា​
+    max_student: ចំនួន​សិស្ស​អតិបរមា
+    student_registered: សិស្សដែលបានចុះឈ្មោះ
   time:
     formats:
       default: '%a, %d %b %Y %H:%M:%S %z'
@@ -83,10 +81,35 @@ km:
       long: '%B %d, %Y %H:%M'
     am: 'am'
     pm: 'pm'
-  lan:
-    english: 'អង់គ្លេស'
-    khmer: 'ខ្មែរ'
-  modal:
-    are_you_sure: 'តើអ្នកប្រកដទេថាចង់លុប'
-    cancel: 'បោះបង់'
-    delete: 'លុប'
+  title:
+    detail: ពត៏មានលម្អិត%{entity}
+    index: បញ្ជី%{entity}
+    new: បង្កើត%{entity}ថ្មី
+    confirm_destroy: តើអ្នកប្រកដទេថាចង់លុប %{entity}?
+    destroy: Destroy %{entity}
+    welcomes: សូមស្វគមន៏
+    our_mission: ពួកយើងជឿថាយើងអាចផ្តល់កាអប់រំទៅកាន់មនុស្សរាល់គ្នា
+    name: ឈ្មោះ
+    start_date: ថ្ងៃចាប់ផ្ដើម
+    end_date: ថ្ងៃបញ្ចប់
+    edit: កែប្រែ%{entity}
+    gender: ភេទ
+    active: សកម្មភាព
+    course_registeration: ចុះឈ្មោះចូលរៀន
+    female: ស្រី
+    male: ប្រុស
+    max_student: ចំនួនសិស្សច្រើនបំផុត
+    student_registered: សិស្សដែលបានចុះឈ្មោះចូលរៀន
+    courses_registered: វគ្គសិក្សាដែលបានចុះឈ្មោះ
+    are_you_sure: តើអ្នកប្រាកដទេ?
+    language: ភាសា
+    krobei: ក្របី
+    student_was_successfully_created: បង្កើតសិស្សបានដោយ​ជោគជ័យ
+    student_was_successfully_updated: កែប្រែព័ត៌មានសិស្សបានដោយ​ជោគជ័យ
+    student_was_successfully_destroy: លុបសិស្សបានដោយ​ជោគជ័យ
+    teacher_was_successfully_created: បង្កើតគ្រូបាន​ដោយ​ជោគជ័យ
+    teacher_was_successfully_updated: កែប្រែព័ត៌មាន​​គ្រូបានដោយ​ជោគជ័យ
+    teacher_was_successfully_destroy: លុបគ្រូ​បាន​ដោយ​ជោគ​ជ័យ​
+    course_was_successfully_created: បង្កើតមុខវិជ្ជាបានដោយ​ជោគជ័យ
+    course_was_successfully_updated: កែប្រែព័ត៌មាន​​មុខវិជ្ជាបានដោយ​ជោគជ័យ
+    course_was_successfully_destroy: លុប​មុខ​វិជ្ជា​បាន​ដោយ​ជោគ​ជ័យ​
